[gd_scene load_steps=19 format=3 uid="uid://xj0dkwgp4dak"]

[ext_resource type="Script" path="res://Scenes/Enemy.gd" id="1_hiw8e"]
[ext_resource type="Script" path="res://Scenes/HitManager.gd" id="2_3tym0"]
[ext_resource type="Material" uid="uid://dwax5uwomrfi0" path="res://Shaders/HurtFlash.tres" id="2_k8iw2"]
[ext_resource type="PackedScene" uid="uid://dl2ifh2mtykpq" path="res://Particles/HitImpact.tscn" id="2_xc1q6"]
[ext_resource type="Texture2D" uid="uid://pnpsbdlclhg2" path="res://Enemy/korn.png" id="3_uswls"]
[ext_resource type="Texture2D" uid="uid://dna0b5w73ci03" path="res://Enemy/dead_korn.png" id="4_7b4be"]
[ext_resource type="Script" path="res://Scenes/EnemyGUI.gd" id="4_n0s1c"]
[ext_resource type="Script" path="res://Scenes/DamageNumber.gd" id="5_jfuxr"]
[ext_resource type="Script" path="res://Scenes/FlashOnHit.gd" id="6_fgrfn"]
[ext_resource type="Script" path="res://Enemy/ProjectileShoot.gd" id="8_i7f5s"]
[ext_resource type="Resource" uid="uid://bxnprj3gow0u4" path="res://Enemy/korn_projectile.tres" id="9_kqmrm"]
[ext_resource type="Script" path="res://Enemy/Node2D.gd" id="12_i2mig"]
[ext_resource type="AudioStream" uid="uid://f3m74mv86atu" path="res://Sounds/Enemy/enemy hit 1.wav" id="13_a452g"]
[ext_resource type="AudioStream" uid="uid://dnoa3vvuj2a1r" path="res://Sounds/Enemy/enemy hit 2.wav" id="14_cgqsh"]
[ext_resource type="AudioStream" uid="uid://hjjhtvrhso1a" path="res://Sounds/Enemy/enemy hit 3.wav" id="15_4uwl6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0ihq0"]
animations = [{
"frames": [ExtResource("3_uswls")],
"loop": true,
"name": &"alive",
"speed": 5.0
}, {
"frames": [ExtResource("4_7b4be")],
"loop": true,
"name": &"dead",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_lgit8"]
font_size = 36
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_61i3l"]
radius = 18.0
height = 78.0

[node name="Enemy" type="Node2D" groups=["enemy"]]
script = ExtResource("1_hiw8e")
max_hp = 8

[node name="HitManager" type="Node2D" parent="."]
script = ExtResource("2_3tym0")

[node name="ImpactEffect" parent="HitManager" instance=ExtResource("2_xc1q6")]

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = ExtResource("2_k8iw2")
use_parent_material = true
position = Vector2(-2, -41)
scale = Vector2(0.6, 0.6)
frames = SubResource("SpriteFrames_0ihq0")
animation = &"alive"

[node name="EnemyGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 14.363
script = ExtResource("4_n0s1c")

[node name="DamageNumber" type="Label" parent="EnemyGUI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = -84.0
offset_right = 40.0
offset_bottom = -58.0
text = "0"
label_settings = SubResource("LabelSettings_lgit8")
script = ExtResource("5_jfuxr")

[node name="Pain" type="Timer" parent="EnemyGUI"]
wait_time = 1.5

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-2, -40)
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_61i3l")

[node name="FlashOnHit" type="Node" parent="."]
script = ExtResource("6_fgrfn")

[node name="Attacks" type="Node2D" parent="."]

[node name="ProjectileShoot" type="Node2D" parent="Attacks"]
script = ExtResource("8_i7f5s")
projectile_stats = ExtResource("9_kqmrm")

[node name="AttackTimer" type="Timer" parent="Attacks/ProjectileShoot"]
one_shot = true

[node name="Sounds" type="Node2D" parent="."]
script = ExtResource("12_i2mig")

[node name="Hit Sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("13_a452g")
max_polyphony = 5

[node name="Hit Sound2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("14_cgqsh")
max_polyphony = 5

[node name="Hit Sound3" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("15_4uwl6")
max_polyphony = 5

[node name="Death Sound" type="AudioStreamPlayer2D" parent="Sounds"]

[connection signal="health_changed" from="." to="HitManager" method="_on_enemy_health_changed"]
[connection signal="health_changed" from="." to="EnemyGUI" method="_on_health_changed"]
[connection signal="health_changed" from="." to="FlashOnHit" method="_on_health_changed"]
[connection signal="health_changed" from="." to="Sounds" method="_on_enemy_health_changed"]
[connection signal="timeout" from="EnemyGUI/Pain" to="." method="_on_pain_timeout"]
